version/0.6/_sources/examples/07-EMIT/index.rst.txt


.. _sphx_glr_examples_07-EMIT:

EMIT examples
~~~~~~~~~~~~~
These examples use PyAEDT to show some end-to-end workflows for EMIT.
This includes schematic generation, setup, and postprocessing.




.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EMIT: Classify interference type">

.. only:: html

  .. image:: /examples/07-EMIT/images/thumb/sphx_glr_ComputeInterferenceType_thumb.png
    :alt:

  :ref:`sphx_glr_examples_07-EMIT_ComputeInterferenceType.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EMIT: Classify interference type</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EMIT: Compute receiver protection levels">

.. only:: html

  .. image:: /examples/07-EMIT/images/thumb/sphx_glr_ComputeProtectionLevels_thumb.png
    :alt:

  :ref:`sphx_glr_examples_07-EMIT_ComputeProtectionLevels.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EMIT: Compute receiver protection levels</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EMIT: antenna">

.. only:: html

  .. image:: /examples/07-EMIT/images/thumb/sphx_glr_EMIT_Example_thumb.png
    :alt:

  :ref:`sphx_glr_examples_07-EMIT_EMIT_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EMIT: antenna</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EMIT: Classify interference type GUI">

.. only:: html

  .. image:: /examples/07-EMIT/images/thumb/sphx_glr_interference_gui_thumb.png
    :alt:

  :ref:`sphx_glr_examples_07-EMIT_interference_gui.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EMIT: Classify interference type GUI</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/07-EMIT/ComputeInterferenceType
   /examples/07-EMIT/ComputeProtectionLevels
   /examples/07-EMIT/EMIT_Example
   /examples/07-EMIT/interference_gui

